<resources>
    <string name="app_name">ecommerce_app</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="server_connection_error">Server connection error</string>
    <string name="buy_now">Buy now!</string>
    <string name="samsung">Samsung</string>
    <string name="new_text">New</string>
    <string name="category">Category</string>
    <string name="best_seller">Best Seller</string>
    <string name="see_more">see more</string>
    <string name="price_discount">1045$</string>
    <string name="price_normal">1200$</string>
    <string name="samsung_note_20_ultra">Samsung Note 20 Ultra</string>
</resources>