<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="4dp"
    android:background="@color/light_grey">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageTopSale"
        android:layout_width="181dp"
        android:layout_height="227dp"
        android:layout_gravity="center"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bestSellerBanner"
                android:layout_width="187dp"
                android:layout_height="168dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerInside" />

            <ImageView
                android:id="@+id/imageFavorite"
                android:layout_width="10dp"
                android:layout_height="11dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="32dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="32dp"
                android:elevation="24dp"
                android:src="@drawable/ic_empty_heart" />

            <ImageView
                android:id="@+id/imageCircle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/top_menu_circle"
                android:elevation="8dp"
                android:src="@drawable/top_menu_circle"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textDiscountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="21dp"
                android:layout_marginBottom="33dp"
                android:fontFamily="@font/mark_pro_bold"
                android:hint="@string/price_discount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textNormalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textDiscountPrice"
                android:layout_marginStart="7dp"
                android:layout_toEndOf="@+id/textDiscountPrice"
                android:fontFamily="@font/mark_pro_bold"
                android:hint="@string/price_normal"
                android:textColor="@color/light_grey"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textDiscountPrice"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/marc_pro_regular"
                android:hint="@string/samsung_note_20_ultra"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>